# softcheck

./: .gitignore  .gitlab-ci.yml  .ocamlinit  .ocp-indent  Makefile  README.md  dune-project  softcheck.opam
.github/workflows/: main.yml
src/analysis/: available_expressions.ml  dune  live_variables.ml  reaching_definitions.ml  sign_analysis.ml  taint.ml  very_busy_expressions.ml
src/cao/: dune
src/cao/analysis/: aexpCao.ml  availableExpressionsCao.ml  liveVariablesCao.ml  reachingDefinitionsCao.ml  taint_cao.ml  veryBusyExpressionsCao.ml
src/cao/ast/: ast.ml  printer.ml
src/cao/cfg/: cfg.ml  cfg_r.ml
src/cao/exe/: #dune  dune  main.ml
src/cao/flow/: flow.ml
src/cao/parser/: lexer.mll  parser.mly
src/exe/: caoMain.ml  dune  tipMain.ml
src/lib/: dune  intervals.ml  intervals.ml#  parsingUtils.ml  sig.ml  softcheck.ml  softcheck.mli
src/lib/analysis/: availableExpressions.ml  liveVariables.ml  reachingDefinitions.ml  signAnalysis.ml  taint.ml  veryBusyExpressions.ml
src/lib/cao/: cao.ml
src/lib/cao/analysis/: aexpCao.ml  availableExpressionsCao.ml  constantPropagationCao.ml  liveVariablesCao.ml  reachingDefinitionsCao.ml  taint_cao.ml  veryBusyExpressionsCao.ml
src/lib/cao/ast/: caoPrinter.ml
src/lib/cao/cfg/: caoCfg.ml
src/lib/cao/exceptions/: caoExceptions.ml  caoExceptions.mli
src/lib/cao/flow/: caoFlow.ml
src/lib/cao/parser/: caoLexer.mll  caoParser.mly
src/lib/cfg/: cfg.ml  cfg_node.ml  cfg_node.mli  dune  flow.ml  flow.mli  flow_graph.ml  flow_graph.mli  node_specifics.ml  sig.mli
src/lib/cubic/: cubic.ml  dune
src/lib/framework/: analysis.ml  callContext.ml  call_context.ml  dataflow.ml  dependencies.ml  dune  flowGraph.ml  imperativeMultiMap.ml  imperative_multi_map.ml  imperative_multi_map.mli  lattice_helper.ml  s.mli  solvers.ml
src/lib/il/: decl.ml  decl.mli  dune  expr.ml  label.ml  label.mli  loc.ml  node.ml  sig.mli  softlang.ml  softlang.mli  stmt.ml  stmt.mli  var.ml
src/lib/lattices/: dune  flat.ml  flat.mli  interval.ml  map.ml  map.mli  pair.ml  pair.mli  powerset.ml  powerset.mli  sequence.ml  sequence.mli  sig.mli  sign.ml  sign_lattice.ml  taint.ml  taint.mli  uniform_product.ml  uniform_product.mli  with_bottom.ml  with_bottom.mli  with_top.ml  with_top.mli
src/lib/refract/: IntervalAnalysis2.ml  compiler.ml  prism.ml  refract.ml
src/lib/tip/: aexpTip.ml  tip.ml
src/lib/tip/analysis/: availableExpressionsTip.ml  liveVariablesTip.ml  reachingDefinitionsTip.ml  signAnalysisTip.ml  taintTip.ml  veryBusyExpressionsTip.ml
src/lib/tip/ast/: tipAst.ml  tipPrinter.ml
src/lib/tip/cfg/: tipCfg.ml  tipInterCfg.ml
src/lib/tip/flow/: tipFlow.ml  tipInterFlow.ml
src/lib/tip/parser/: tipLexer.mll  tipParser.mly
src/lib/utils/: collections.ml  collections.mli  dune  list.ml  map.ml  mapWithDefault.ml  multiPHashtbl.ml  myHashtbl.ml  mySet.ml  set.ml  utils.ml
src/michelson/: converter.ml  dune  michelscil.ml
src/softcheck/: cfg_node.ml  dune  intervals.ml  sig.ml
src/softcheck/cfg/: flow_graph.ml  flow_graph.mli
src/softcheck/cubic/: cubic.ml
src/softcheck/framework/: call_context.ml  cfg_node.ml  common.ml  dataflow.ml  dependencies.ml  flow.ml  flow_graph.ml  flow_graph.mli  imperative_multi_map.mli  softlang.ml  softlang.mli  solvers.ml
src/softcheck/il/: cfg_node.ml  cfg_node.mli  node_sig.ml  softlang.ml  softlang.mli
src/softcheck/il/cfg_node/: cfg_node.ml  cfg_node.mli  node_specifics.ml
src/softcheck/il/scil/: softlang.ml  softlang.mli
src/softcheck/il/softlang/: softlang.ml  softlang.mli
src/softcheck/lattices/: lattices.ml  taint_lattice.ml
src/softcheck/utils/: mapWithDefault.ml  multiPHashtbl.ml  parsing_utils.ml
src/test/: caoTest.ml  cubicTest.ml  dune  tipTest.ml
src/tip/: aexp_tip.ml  dune  flow.ml  node.ml  sl_node.ml  specifics.ml
src/tip/analysis/: available_expressions.ml  live_variables.ml  reaching_definitions.ml  sign.ml  taint.ml  very_busy_expressions.ml
src/tip/ast/: ast.ml  convert_to_sl.ml  printer.ml
src/tip/cfg/: cfg.ml  cfg_r.ml  inter_cfg.ml
src/tip/exe/: dune  main.ml
src/tip/flow/: flow.ml  inter_flow.ml
src/tip/parser/: lexer.mll  parser.mly
tests/: cubic.out
tests/cao/: ae.cao  ae.result  lv.cao  lv.result  rd.cao  rd.result  vb.cao  vb.result
tests/tip/: ae.result  ae.tip  fun.tip  lv.result  lv.tip  my.tip  rd.result  rd.tip  signs.result  signs.tip  taint.tip  test1.tip  vb.result  vb.tip
