
(copy_files# il/*)
(copy_files# il/cfg_node/*)
(copy_files# il/softlang/*)
(copy_files# framework/*)
(copy_files# cubic/*)
(copy_files# lattices/*)
(copy_files# utils/*)

(library
  (name softcheck)   ; doesn't support '-' in the name
  (public_name softcheck)
  (libraries ocamlgraph facile fix batteries bitv)
  (synopsis "Softcheck."))
