(executables
  (names tipTest caoTest cubicTest)
  (modules tipTest caoTest cubicTest)
  (libraries kaputt softcheck cao tip)
  (flags -g)
  (modes byte))

(alias
  (name runtest)
  (deps ../cao/exe/main.exe ../tip/exe/main.exe)
  (action (progn (run ./caoTest.exe) (run ./tipTest.exe) (run ./cubicTest.exe))))
